@@ -1,3 +1,8 @@
+2008-08-05  Peter Johanson  <peter@peterjohanson.com>
+
+	* AvoidUnusedParametersTest.cs: Ensure the rule works
+	for several methods used with delegates inside one method.
+
 2008-08-04  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidUncalledPrivateCodeTest.cs: Add test cases for events.
